--- a/environment.yml
+++ b/environment.yml
@@ -3,109 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - attrs=24.2.0=pyh71513ae_0
-  - blosc=1.21.6=h85f69ea_0
-  - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.7.4=h56e8100_0
-  - cffi=1.17.0=py310ha8f682b_0
-  - cfgrib=0.9.14.0=pyhd8ed1ab_0
-  - click=8.1.7=win_pyh7428d3b_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - eccodes=2.36.0=h4f3607b_0
-  - findlibs=0.0.5=pyhd8ed1ab_0
-  - freeglut=3.2.2=he0c23c2_3
-  - hdf4=4.2.15=h5557f11_7
-  - hdf5=1.14.3=nompi_h2b43c12_105
-  - intel-openmp=2024.2.0=h57928b3_980
-  - jasper=4.2.4=hcb1a123_0
-  - krb5=1.21.3=hdf4eb48_0
-  - libaec=1.1.3=h63175ca_0
-  - libblas=3.9.0=23_win64_mkl
-  - libcblas=3.9.0=23_win64_mkl
-  - libcurl=8.9.1=h18fefc2_0
-  - libffi=3.4.4=hd77b12b_1
-  - libhwloc=2.11.1=default_h8125262_1000
-  - libiconv=1.17=hcfcfb64_2
-  - libjpeg-turbo=3.0.0=hcfcfb64_1
-  - liblapack=3.9.0=23_win64_mkl
-  - libnetcdf=4.9.2=nompi_h8284064_111
-  - libpng=1.6.43=h19919ed_0
-  - libsqlite=3.46.0=h2466b09_0
-  - libssh2=1.11.0=h7dfc565_0
-  - libxml2=2.12.7=h0f24e4e_4
-  - libzip=1.10.1=h1d365fa_3
-  - libzlib=1.3.1=h2466b09_1
-  - lz4-c=1.9.4=hcfcfb64_0
-  - mkl=2024.1.0=h66d3029_694
-  - openssl=3.3.1=h2466b09_2
-  - packaging=24.1=pyhd8ed1ab_0
-  - pandas=2.2.2=py310hb4db72f_1
-  - pip=24.2=py310haa95532_0
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pycparser=2.22=pyhd8ed1ab_0
-  - python=3.10.14=h4de0772_0_cpython
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-eccodes=1.7.1=py310hb0944cc_0
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.10=4_cp310
-  - pytz=2024.1=pyhd8ed1ab_0
-  - setuptools=72.1.0=py310haa95532_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.2.1=h23299a8_0
-  - sqlite=3.45.3=h2bbff1b_0
-  - tbb=2021.12.0=hc790b64_3
-  - tk=8.6.13=h5226925_1
-  - tzdata=2024a=h04d1e81_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - vc=14.40=h2eaa2aa_0
-  - vc14_runtime=14.40.33810=ha82c5b3_20
-  - vs2015_runtime=14.40.33810=h3bf8584_20
-  - wheel=0.43.0=py310haa95532_0
-  - xarray=2024.7.0=pyhd8ed1ab_0
-  - xz=5.4.6=h8cc25b3_1
-  - zstd=1.5.6=h0ea2cb4_0
+  - python=3.10
+  - cfgrib
+  - pip
   - pip:
-      - altair==5.4.0
-      - blinker==1.8.2
-      - cachetools==5.4.0
-      - catboost==1.2.5
-      - certifi==2024.7.4
-      - charset-normalizer==3.3.2
-      - contourpy==1.2.1
-      - cycler==0.12.1
-      - fonttools==4.53.1
-      - gitdb==4.0.11
-      - gitpython==3.1.43
-      - idna==3.7
-      - jinja2==3.1.4
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - kiwisolver==1.4.5
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.9.2
-      - mdurl==0.1.2
-      - narwhals==1.4.0
-      - numpy==1.26.4
-      - pillow==10.4.0
-      - plotly==5.23.0
-      - protobuf==5.27.3
-      - pyarrow==17.0.0
-      - pydeck==0.9.1
-      - pygments==2.18.0
-      - pyparsing==3.1.2
-      - python-graphviz==0.20.3
-      - referencing==0.35.1
-      - requests==2.32.3
-      - rich==13.7.1
-      - rpds-py==0.20.0
-      - scipy==1.14.0
-      - smmap==5.0.1
-      - streamlit==1.37.1
-      - tenacity==8.5.0
-      - toml==0.10.2
-      - tornado==6.4.1
-      - typing-extensions==4.12.2
-      - urllib3==2.2.2
-      - watchdog==4.0.2
-prefix: C:\Users\Jirka\anaconda3\envs\ekovin
+      - numpy<2
+      - requests
+      - xarray
+      - matplotlib
+      - catboost
+      - pandas
+      - streamlit
